<resources>

    <string name="app_name" translatable="false">Let’s Quit Smoke</string>
    <string name="app_id">835078053210256</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lable">lable</string>
    
    <string name="quit"> Are you sure ?</string>
    <string name="really_quit">Yes for exit.</string>
    <string name = "yes">Yes</string>
    <string name = "no">no</string>
    <string name="list_text">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0สูบบุหรี่ไม่ดีอย่างไรบ้าง
         	\n1.การสูบบุหรี่ คือความสุขระยะสั้นแต่บั่นทอนชีวิตระยะยาว
			\n2.อย่าปล่อยให้ควันบุหรี่ทำร้ายสุขภาพของคุณและคนใกล้ชิด
			\n3.ควันบุหรี่ทำให้เกิดความระคายเคืองต่อระบบทางเดินหายใจอย่างมากและทำให้ปอดเสื่อมสมรรถภาพลง
			\n4.90% ของคนที่เสียชีวิตด้วยโรคถุงลมโป่งพอง มีสาเหตุมาจากการสูบบุหรี่</string>
    <string name="list_text2">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0วิธีเลิกที่ดีที่สุด
         	\n1.คนที่ยังเลิกไม่ได้ คือคนที่ไม่เคยคิดเลิกบุหรี่เลย
			\n2.ตัดสินใจพร้อมลงมือปฏิบัติ ทิ้งบุหรี่ อย่าให้ตัวเองว่าง อย่าให้ปากว่าง ใช้วิธีอม เคี้ยวมะนาว ซึ่งหั่นเป็นชิ้นเล็กๆ ทั้งเปลือก ความขมๆ เฝื่อนๆ ของมะนาว ทำให้บรรเทาความอยากบุหรี่ ทำแบบนี้ทุกครั้ง เมื่ออยากสูบบุหรี่
			\n3.จำเป็นจะต้องทำตัวเหินห่างสังคมเดิมๆ ที่ดื่มสุรา และสูบบุหรี่</string>
    
    <string name="text_graph">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0เป็นส่วนที่ช่วยให้คุณสามารถตรวจเช็คปริมาณการสูบบุหรี่ในเเต่ละวันเพื่อให้เป็นเกณฑ์ในการตัดสินใจในการลดหรือเลิกบุหรี่ตัวกราฟออกเเบบมาให้เข้าใจง่ายมีระดับสีเเดงเหลืองเขียวตามปริมานการสูบที่คุณตั้งค่า\nไว้นอกจากนั้นยังสามารถดูรายละเอียดการสูบบุหรี่ใน\nเเต่ละวันโดยรายละเอียดจะเเบ่งเป็นจำนวนครั้งที่สูบวันที่และเวลาอย่างชัดเจนเเละเข้าใจง่าย</string>
    <string name="text_guide">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0เป็นส่วนที่ช่วยให้ข้อมูลคำแนะนำเกี่ยวกับวิธีเลิก\nบุหรีที่ดีที่สุดการแก้ไขอาการเบื้องต้นและสูบบุหรี่ไม่ดี\nอย่างไรบ้าง</string>
    <string name="text_setting">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0เป็นส่วนตั้งค่าวันที่เพื่อลดบุหรี่หรือเลิกบุหรี่เพื่อใช้\nเป็นข้อมูลในการวิเคราะห์เเละง่ายต่อการติดตามผลใน\nภายหลัง</string>
    <string name="text_share">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0เป็นส่วนที่ช่วยให้คุณสามารถเเบ่งปันข้อมูลเกี่ยว\nกับการลดหรือเลิกบุหรี่เเละยังเป็นการช่วยกระจายข่าว\nสารให้กับผู้ที่มีความสนใจในการ ลด หรือ เลิก บุหรี่ อีกด้วย</string>
    <string name="text_manual">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0เป็นส่วนที่ช่วยให้คุณสามารถใช้งาน Lets Quit Smokeได้ง่ายขึ้นโดยภายในจะมีเนื้อหาบอกการใช้งานอย่างง่ายๆเมื่อคุณต้องการรู้การใช้งานสามารถเข้ามาหาข้อมูลได้ไม่ยาก</string>
    <string name="text_embolden">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0คนที่กำลังจะเลิกบุหรี่ก็เหมือนนักรบที่เข้าสู่\nสมรภูมิโดยมีคู่ต่อสู้เป็นบุหรี่และอาการขาดบุหรี่ก็คือ\nอาการบาดเจ็บจากการต่อสู้ดังนั้นต้องเตรียมพร้อม โทร 1600 ช่วยคุณได้</string>
    
    <string name="text_smoke">\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0 เมื่อคุณต้องการที่จะลดการสูบบุหรี่ คุณเเค่คลิกปุ่มนี้เพื่อบันทึกการสูบเพื่อนำข้อมูลไปวิเคราะห์ว่าเเต่ละวันคุณสูบบุหรี่เป็นจำนวนเท่าไปเกินเป้าหมายที่คุณได้ตั้งไว้หรือไม่
</string>

</resources>