<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- call BG -->

            <ImageView
                android:id="@+id/callBtn"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/circleblue"
                android:src="@drawable/ic_action_call" />

            <TextView
                android:id="@+id/textcall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_embolden" />

            <TextView
                android:id="@+id/textSmoke"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle_red_smoke"
                android:gravity="center"
                android:text="กด เพื่อบันทึก การสูบ"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textsmoke"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_smoke" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle1"
                android:src="@drawable/ic_action_network_cell" />

            <TextView
                android:id="@+id/textgraph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_graph" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle_facebook"
                android:src="@drawable/facebookf" />

            <TextView
                android:id="@+id/textfacebook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_share" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle2"
                android:src="@drawable/ic_action_paste" />

            <TextView
                android:id="@+id/texttutoral"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_guide" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle_tutor"
                android:src="@drawable/ic_qu" />

            <TextView
                 android:id="@+id/text_manual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_manual" />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="30dp"
                android:background="@drawable/circle3"
                android:src="@drawable/ic_action_settings" />

            <TextView
                android:id="@+id/text_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_setting" />

            
            <!-- call BG -->

            <RelativeLayout
                android:id="@+id/layoutGo"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="#00bcd4"
                android:gravity="center" >

                <Button
                    android:id="@+id/acceptBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/accept" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutMenu"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#00bcd4"
        android:gravity="center" >

        <Button
            android:id="@+id/acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/accept" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#00bcd4" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/list" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView1"
            android:text="Let&apos;s Quit Smoke!"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>